kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: YOUR_DOCKERHUB_USERNAME/agile-backend:latest
          # GHA will replace 'latest' with the git SHA tag e.g. :a1b2c3d
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: sqlite-storage
              mountPath: /app/instance
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
